Pulumi/sample-yaml/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  phpapp
  labels:
    app:  phpapp
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app:  phpapp
